--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 :root {
     --main-color: #f2eae2cb;
-    --secondary-color:#FFFFFF;
+    --secondary-color: #FFFFFF;
     --tertiary-color: #6B7189;
     --primary-text-color: #1C232B;
     --secondary-text-color: #3D8168;
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -14,23 +14,17 @@
 
 head {
     font-size: 11px;
-    text-align: center;  
+    text-align: center;
 }
 
 /* principal */
 
 body {
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     display: flex;
     font-size: 14px;
     background-color: var(--main-color);
-}
-
-.container {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
@@ -45,14 +39,14 @@ body {
     border-radius: 8px 0 0 8px;
 }
 
-.img2{
+.img2 {
     display: none;
 }
 
- .direito {
+.direito {
     display: flex;
     flex-direction: column;
-    width:250px;
+    width: 250px;
     height: 375px;
     background-color: var(--secondary-color);
     border-radius: 0 8px 8px 0;
@@ -99,7 +93,7 @@ body {
 }
 
 .precoDesconto {
-    font-family:'Fraunces', serif;
+    font-family: 'Fraunces', serif;
     font-size: 25px;
     color: var(--secondary-text-color);
 }
@@ -144,20 +138,21 @@ i {
 
 @media screen and (max-width: 500px) {
 
-.container {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+    body {
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 
-.img {
-    display: none;
-}
+    .img {
+        display: none;
+    }
 
-.img2 {
-    display: flex;
-    width: 250px;
-    border-radius: 8px 8px 0 0;
+    .img2 {
+        display: flex;
+        width: 250px;
+        border-radius: 8px 8px 0 0;
+    }
 }
